--- a/labs/mobile/twoPageMobile.html
+++ b/labs/mobile/twoPageMobile.html
@@ -3,8 +3,10 @@
 	<head> 
 	<title>Multiple Pages</title> 
 	<link rel="stylesheet" href="../javascript/jqueryMobile/jquery.mobile-1.0a2.css" />
-    <script src="../javascript/jquery-1.4.3.js" type="text/javascript"></script>
-    <script src="../javascript/jqueryMobile/jquery.mobile-1.0a2.js" type="text/javascript"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="../javascript/jqueryMobile/jquery.mobile-1.0.min.css" />
+    <script src="../javascript/jquery-1.6.4.js" type="text/javascript"></script>
+    <script src="../javascript/jqueryMobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 </head> 
 <body> 
 <div data-role="page" id="page1">
